# BusNavigationProgram

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
dataset/: line_106_0.csv  line_11M_1.csv  line_12M_1.csv  line_13M_0.csv  line_13M_1.csv  line_1M_0.csv  line_1M_1.csv  line_200_0.csv  line_201_0.csv  line_202_0.csv  line_203_0.csv  line_203_1.csv  line_204_1.csv  line_205_0.csv  line_205_1.csv  line_206_0.csv  line_207_1.csv  line_208_0.csv  line_300_0.csv  line_301_0.csv  line_303_0.csv  line_304_0.csv  line_304_1.csv  line_305_0.csv  line_400_0.csv  line_402_1.csv  line_403_1.csv  line_4M_0.csv  line_4M_1.csv  line_502_0.csv  (+41 more)
dataset (copy)/: .encoding.sh.swp
dataset-copy/: encoding.sh  line_106_1.csv  line_107_0.csv  line_107_1.csv  line_10M_0.csv  line_10M_1.csv  line_11M_0.csv  line_12M_0.csv  line_18_0.csv  line_18_1.csv  line_1_0.csv  line_1_1.csv  line_200_1.csv  line_201_1.csv  line_202_1.csv  line_204_0.csv  line_206_1.csv  line_207_0.csv  line_208_1.csv  line_209_0.csv  line_209_1.csv  line_302_0.csv  line_305_1.csv  line_3M_0.csv  line_3M_1.csv  line_400_1.csv  line_401_0.csv  line_401_1.csv  line_402_0.csv  line_403_0.csv  line_500_0.csv  line_500_1.csv  line_501_0.csv  line_501_1.csv  line_503_0.csv  line_504_0.csv  line_504_1.csv  line_505_1.csv  line_507_1.csv  line_508_1.csv  (+34 more)
dataset-small/: line_BLU_0.csv  line_BLU_1.csv  line_BRN_0.csv  line_BRN_1.csv  line_GRN_0.csv  line_GRN_1.csv  line_ORG_0.csv  line_ORG_1.csv  line_PNK_0.csv  line_PRP_0.csv  line_PRP_1.csv  line_RED_0.csv  line_RED_1.csv  line_YLO_0.csv  line_YLO_1.csv  lines.csv  stops.csv
(+299 files in other folders)
